@@ -23,7 +23,7 @@
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #
 
-from base import DataError, FormatError, PasswordError, VersionError
+from base import HandlerError, DataError, FormatError, PasswordError, VersionError
 from fpm import FPM
 from gpass import GPass
 from netrc import NetRC
